@@ -1,4 +1,5 @@
 27 Oct, 2018
+fix: memcached stats when using sockets
 fix: polls
 update: README
 update: allow memcached to use sockets
